src/components/HomepageFeatures.module.css
.img_video_container {
  display: flex;
  justify-content: space-between;
  padding-bottom: 144px;
  gap: 115px;
}

.img_video_container_in {
  width: 516px;
  height: 346.5px;
}

.youtube_video{
  width: 616px;
}

.main_img {
  width: 100%;
  object-fit: contain;
}

.main_img_title h2 {
  width: 390px;
  font-size: 32px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  margin-bottom: 64px;
}
.solid{
  stroke-width: 1px;
  stroke: #E4E4E4;
  margin: 72px 0;
  background-color: #E4E4E4;
}

[data-theme='dark'] .solid{
  stroke-width: 1px;
  stroke: #3D3D3D;
  background-color: #3D3D3D;
}

.feature_grid_title {
  text-align: center;
  padding-top: 144px;
  padding-bottom: 64px;
  font-size: 40px;
  margin: 0;
}

.features {
  display: flex;
  flex-flow: column;
  justify-content: center;
  width: 100%;
  flex-wrap: wrap;
  max-height: 600px;
  padding: 0;
  gap: 89px;
  column-gap: 32px;
  margin-bottom: 144px;
}

.features_line{
  display: flex;
  gap: 32px;
}

.bottom_element{
  padding-bottom: 176px;
}

.features_line .feature_container {
  width: 48%;
}

.features .feature_container {
  width: 48%;
  height: fit-content;
  flex-grow: 1;
}

.feature_child_container{
  margin-top: 48px;
  padding-right: 10px;
}

.feature_container{
  height: auto;
}

.feature_container p{
  width: 90%;
  margin-bottom: 24px;
}

.feature_title_container {
  display: flex;
  justify-content: center;
  vertical-align:middle;
  height: 39px;
  width: fit-content;
  gap: 16px;
  margin-bottom: 24px;
}

.feature_icon{
  width: 32px;
  height: 32px;
  margin: auto;
}

.feature_title {
  font-size: 32px;
  font-weight: 700;
  line-height: 39px;
  letter-spacing: 0em;
  height: 39px;
  margin: 0;
}

.feature_link_container{
  margin-top: 24px;
}

.feature_link {
  font-size: 16px;
  font-weight: 700;
  line-height: 19px;
  letter-spacing: 0em;
  text-align: left;
}

.feature_link img{
  filter: invert(47%) sepia(100%) saturate(4115%) hue-rotate(196deg) brightness(90%) contrast(100%);
}


.plugin_grid{
  margin-top: 48px;
  display: flex;
  flex-flow: wrap;
  gap: 32px;
}

.plugin_container{
  width: 385px;
}

.plugin_title{
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  margin-bottom: 16px !important;
}
.img_grid{
  gap: 24px;
}

@media screen and (max-width: 1300px) {
  .features .feature_container {
    width: calc(50% - 16px);
  }

  .plugin_container{
    width: 30%;
  }
  
  .main_img_title h2 {
    width: 390px;
    font-size: 32px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    margin-bottom: 54px;
  }

  .img_video_container {
    display: flex;
    justify-content: space-between;
    padding-bottom: 144px;
    gap: 78px;
  }

  .img_video_container_in {
    width: auto;
    height: fit-content;
  }

  .youtube_video{
    width: 616px;
  }

  .feature_title_container {
    margin-bottom: 24px;
  }
  .feature_description{
    padding-bottom: 48px;
  }
  .feature_img{
    height: 20px;
  }
}

@media (max-width: 1180px) {
  .plugin_container{
    width: 45%;
  }
}

@media (max-width: 1000px) {
  .features {
    max-height: 700px;
  }
}

@media (max-width: 950px) {
  .img_video_container {
    gap: 1px;
  }

  .img_video_container_in {
    width: 48%;
    height: fit-content;
  }
  .main_img_title h2 {
    font-size: 24px;
    margin-bottom: 32px;
  }
  .feature_title {
    font-size: 25px;
  }
}

@media (max-width: 768px) {

  .plugin_container{
    width: 100%;
  }

  .img_video_container {
    flex-flow: column;
    padding-bottom: 96px;
  }
  
  .img_video_container_in {
    width: 100%;
  }

  .main_img_title h2 {
    width: 100%;
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    margin-bottom: 32px;
  }

  .feature_grid_title {
    padding-top: 96px;
    font-size: 24px;
  }

  .features {
    width: 100%;
    height: auto;
    max-height: none;
    gap: 64px;
    margin-bottom: 96px;
  }

  .features .feature_container {
    width: 100%;
    margin: 0;
  }

  .feature_container {
    width: 100%;
    flex-grow: 1;
  }

  .feature_container p{
    width: 100%;
    margin-bottom: 16px;
  }
  .features_line{
    flex-wrap: wrap;
    gap: 64px;
  }
  .solid{
    margin: 48px 0;
  }

  .feature_title_container {
    gap: 12px;
    height: fit-content;
    margin-bottom: 16px;
  }

  .feature_icon{
    width: 20px;
    height: 20px;
    margin: 0;
  }

  .feature_title {
    height: fit-content;
    font-size: 20px;
    line-height: normal;
  }
  
  .feature_link_container{
    margin-top: 16px;
  }

  .bottom_element{
    padding-bottom: 96px;
  }

  .feature_img{
    height: 4vw;
  }

  .img_video_container {
    gap: 24px;
  }
  .plugin_title{
    margin-bottom: 12px !important;
  }
  .plugin_grid{
    gap: 24px;
  }
  .feature_child_container{
    margin-top: 32px;
  }
  .feature_img{
    height: 11px;
  }
  .img_grid{
    gap: 14px;
  }
}

